# CS-426-Euclid

./: CMakeLists.txt  README.md  main.cpp
